# cr

./: .env.sample  README.md  pyproject.toml
blog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_blog_is_published_blog_slug.py
blog/templates/blog/: blog_detail.html  blog_list.html
config/: settings.py  urls.py
fixtures/: all_data.json  auth.json  db.json
mailing/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
mailing/management/commands/: send_mailings.py
mailing/migrations/: 0001_initial.py  0002_alter_mailing_period_alter_mailing_status.py  0003_alter_mailing_last_send_date_time_and_more.py  0004_alter_mailing_status.py  0005_alter_mailing_first_send_date_time_and_more.py  0006_alter_mailing_period_alter_mailing_status.py  0007_client_owner_mailing_owner_message_owner.py  0008_alter_mailing_options.py
mailing/templates/mailing/: attempts_detail.html  attempts_list.html  base.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  log_list.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html
main/: services.py  urls.py  views.py
main/templates/main/: home.html
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  register.html  user_detail.html  user_form.html  user_list.html
