[tool.poetry]
name = "cr"
version = "0.1.0"
description = ""
authors = ["TolyaLaz <toljik1@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2.2"
psycopg2 = "^2.9.9"
pytz = "^2024.1"
django-apscheduler = "^0.6.2"
pillow = "^10.4.0"
redis = "^5.0.8"
python-dotenv = "^1.0.1"
pytils = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
